# GNeuro

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/GNeuro/: Activation.hpp  Functions.hpp  GNeuro.hpp  Layer.hpp  Loss.hpp  Model.hpp  Network.hpp  Neuron.hpp  Random.hpp  Type.hpp
src/GNeuro/: CMakeLists.txt  Layer.cpp  Network.cpp
src/Test/: CMakeLists.txt  main.cpp
